# PDCpy

./: .gitattributes  .gitignore  MANIFEST.in  README.md  build.sh  change_version.py  cpdc.pxd  distribute.sh  genindex.html  index.html  license.txt  objects.inv  pdc.c  pdc.pyx  pdc_double_close.c  pdc_init.py  py-modindex.html  pyproject.toml  run_tests.py  search.html  searchindex.js  setup.py  test.sh
.github/workflows/: pages.yml
_sources/: index.rst.txt
ctests/: build.sh  container_delete_tag.c  container_duplicate_name.c  container_get_after_delete.c  obj_set_all_data.c  object_get_set.c  object_transfer_test.c  object_transfer_test2.c  query.c
docs/source/: conf.py  index.rst
pdc/: __init__.c  __init__.pyx  container.c  container.pyx  cpdc.pxd  main.c  main.pxd  main.pyx  object.c  object.pyx  query.c  query.pyx  region.c  region.pxd  region.pyx
tests/: kvtag_query.py  query_data.py  test_container.py  test_iterators.py  test_kvtag.py  test_kvtag_query.py  test_object.py  test_object_set_all.py  test_prop.py  test_query.py  test_query_data.py  test_ready.py  test_region.py  test_transfer_requests.py
tests/examples/: obj_get_data.py  test_make_container.py  test_obj_get_data.py  test_region_example.py  vpicio_mpi_write_read_results_with_pdc_persistent.py
