[build-system]
requires = [ "setuptools", "wheel", "Cython", "numpy",]
build-backend = "setuptools.build_meta"

[project]
name = "PDCpy"
version = "0.0.16"
description = "PDCpy is the official Python interface for PDC."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: Unix",]
[[project.authors]]
name = "Craig White"
email = "gerzytet@gmail.com"

[[project.authors]]
name = "Houjun Tang"
email = "htang4@lbl.gov"

[tool.setuptools.packages.find]
where = [ "pdc",]
